# rclone-sync

./: .gitignore  .gitlab-ci.yml  Dockerfile  docker-compose.yml  main.py  pyproject.toml  rclone_install.sh
src/: config.py  log.py
